[package]
name = "sorting-algorithms"
version = "0.1.0"
authors = ["Jeongho Jang <josephjang@gmail.com>"]
edition = "2018"
description = "A collection of the implementations of various sorting algorithms"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
